browser/css/jsdialogs.css
/* ... */
.snackbar.jsdialog-container .ui-dialog-content {
	width: max-content !important;
}
#mobile-wizard.popup.snackbar #label,
.snackbar.jsdialog-container #label,
#mobile-wizard.popup.snackbar #label-no-action,
.snackbar.jsdialog-container #label-no-action {
	color: white !important;
	font-size: var(--header-font-size) !important;
	margin: 0px !important;
	border-bottom: none !important;
	padding-left: 12px;
	flex: min-content;
	text-transform: inherit;
}

#mobile-wizard.popup.snackbar #label-no-action,
.snackbar.jsdialog-container #label-no-action {
	padding-right: 8px;
	text-align: center;
}

.snackbar.jsdialog-container #label {
	padding: 2px 24px 2px 8px;
}

.snackbar.jsdialog-container #label-no-action {
	padding: 2px 8px;
}

#mobile-wizard.popup.snackbar [id$='button'],
.snackbar.jsdialog-container [id$='button'].ui-pushbutton.jsdialog {
	padding-right: 12px;
	background-color: transparent !important;
	border: none !important;
	margin: 0 !important;
	justify-content: center;
}

.snackbar.jsdialog-container [id$='button'].ui-pushbutton.jsdialog {
	padding: var(--spacing-m);
}

#snackbar-container-progress .ui-progressbar {
	display: grid;
	grid-column: 1 / 3;
}

#snackbar-container-progress {
	grid-template-rows: repeat(2, auto);
	grid-template-columns: repeat(2, auto);
}

#mobile-wizard.popup.snackbar [id$='button'] {
	padding: var(--spacing-m);
}

#mobile-wizard.popup.snackbar [id$='button'],
.snackbar.jsdialog-container [id$='button'] {
	color: #469cff !important;
	font-weight: 600;
	font-size: var(--header-font-size) !important;
	display: flex;
	align-items: center;
}
.snackbar.jsdialog-container [id$='button']:hover {
	background-color: #ffffff15 !important;
}

/* toolbuttons */
.jsdialog .ui-content.unobutton {
	height: var(--btn-size);
	width: var(--btn-size);
	display: flex;
	flex-direction: column;
	padding: var(--btn-padding);
	vertical-align: middle;
	background-color: transparent;
	border: none;
	position: relative;
	overflow: hidden;
	justify-content: center;
	align-items: center;
}

#toolbar-wrapper:not(.mobile) ~ #toolbar-down .has-dropdown > .ui-content.unobutton {
	width: max-content;
}

.jsdialog .ui-content.unobutton::after {
	--click-increment: -1px;
	position: absolute;
	content: '';
	top: var(--click-increment);
	right: var(--click-increment);
	bottom: var(--click-increment);
	left: var(--click-increment);
	pointer-events: none;
}

/* targetting buttons inside of split button */
.notebookbar .splitbutton > .ui-content.unobutton:hover,
.jsdialog .splitbutton > .ui-content.unobutton:hover {
	background-color: var(--color-background-darker);
}

.unotoolbutton.has-dropdown {
	display: grid;
	align-items: center;
	grid-auto-flow: column;
	grid-template-rows: auto 0px;
}

/* handling show/hide state */
.hidden {
	display: none !important;
}

/* dialog/popup fade animation */
@media (prefers-reduced-motion: no-preference) {
	.fadeout {
		animation: fade 0.7s;
	}
	.fadein {
		animation: fade reverse 0.15s;
	}
	.fsdialog-overlay {
		animation: fade reverse .3s;
	}
}

@keyframes fade {
	from { opacity: 1 }
	to { opacity: 0 }
}

/* images */

.ui-image {
	margin: auto;
}

.ui-drawing-area-container {
	margin: auto;
}

/* Writer - Insert - Page Number - page preview image */
[data-theme='dark'] #PageNumberDialog #previewImage {
	filter: invert(.95)
}

/* Writer - Table of Contents, Index or Bibliography dialog, Columns tab */
[data-theme='dark'] #ColumnPage #pageexample-img,
[data-theme='dark'] #ColumnPage #column-iconview img {
	filter: invert(.9)
}

/* scrollable content */
.ui-scrollable-content {
	overflow-x: scroll;
	overflow-y: hidden;
	scrollbar-width: none; /* Firefox >= 64 */
	overflow: -moz-scrollbars-none; /* Firefox < 64 */
	-ms-overflow-style: none;  /* Internet Explorer 10+ */
	display: flex;
	align-items: center;
}

.ui-scrollable-content::-webkit-scrollbar { /* WebKit */
	width: 0;
	height: 0;
}

/* formulabar */
#sc_input_window.formulabar {
	border: 1px solid var(--color-border);
	flex-grow: 1;
	background-color: var(--color-background-lighter);
	border-radius: var(--border-radius) 0 0 var(--border-radius);
	align-self: stretch;
}

.ui-custom-textarea {
	position: relative;
}

.ui-custom-textarea-overflow-wrapper {
	overflow: auto;
	overscroll-behavior: none;
	width: 100%;
	height: 100%;
	display: grid;
}

.ui-custom-textarea.focused {
	border: 1px solid var(--color-primary) !important;
}

.ui-custom-textarea,
.ui-custom-textarea-cursor-layer,
.ui-custom-textarea-handle-layer,
.ui-custom-textarea-text-layer {
	font-family: monospace;
	line-height: 1.2;
	font-size: calc(var(--default-font-size)*1.2) !important;
	color: var(--color-main-text);
	overflow-wrap: anywhere;
}

.ui-custom-textarea-cursor-layer,
.ui-custom-textarea-handle-layer,
.ui-custom-textarea-text-layer {
	padding: var(--spacing-s);
	grid-column: 1;
	grid-row: 1;
	white-space: pre-wrap;
	white-space: wrap;
}

.ui-custom-textarea-cursor-layer {
	color: transparent;
	pointer-events: none;
}

.ui-custom-textarea-handle-layer {
	position: absolute; /* both lets us position handles absolute to this and pulls us out of the overflow: auto */
}

.ui-custom-textarea.focused .ui-custom-textarea-cursor-layer span.cursor:not(.hidden) {
	border-left: 1px solid black;
	margin-left: -1px;
}

.ui-custom-textarea-cursor-layer span.selection:not(.hidden) {
	background-color: var(--color-primary-darker);
	color: var(--color-primary-text);
}

#sc_input_window.formulabar:focus {
	outline-offset: -1px;
}

#sc_input_window.formulabar.expanded {
	border-radius: var(--border-radius) 0 var(--border-radius) var(--border-radius) !important;
}

#formulabar-buttons-toolbox.formulabar.toolbox {
	display: grid;
	grid-auto-flow: column;
	align-items: center;
	grid-column-gap: var(--spacing-s);
	grid-template-columns: repeat(3, 30px);
}

#formulabar-buttons-toolbox * {
	align-items: center;
	justify-content: center;
}

.unotoolbutton.formulabar {
	display: flex;
}
/* ... */

